Fix code review findings for receive-event output mappings
- Preserve null-valued mapping results instead of crashing WorkflowInstance.Builder.build() (Map.copyOf rejected nulls)
- Route mapping-evaluation failures through the configured error handler in both the engine (completeNode) and the UI simulator (resumeSimulation), instead of letting the exception escape
- Use real EL syntax parsing (isValidExpression) for INVALID_OUTPUT_EXPRESSION instead of the delimiter-balance heuristic
- Guard the Viewer and Editor against malformed outputs entries (null items, non-array outputs) instead of crashing on render
- Restore ReceiveEventInfo's 4-arg backward-compatible constructor
- Require actual string types for contextKey/expression in both validators and at runtime, aligning engine and simulator behavior
- Use a null-prototype accumulator in the simulator so a "__proto__" contextKey is stored as an own property

Adds engine and UI test coverage for each fix.